<resources>

    <!-- main activity -->
    <string name="app_name">GuessingGame</string>
    <string name="welcome_title">Welcome to Guessing Game!</string>
    <string name="welcome_message">Here you have to pick between two players on screen and try and pick the player with the highest FPPG ranking!</string>
    <string name="welcome_message_description">Try and get 10 correct in the least amount of tries.</string>
    <string name="continue_button">CONTINUE</string>

    <!-- guessing activity -->
    <string name="guessing_game_instruction_message">Choose who you think has the highest FanDuel points per game? Your goal is to get 10 right in the minimum amount of guesses.</string>
    <string name="next">NEXT PLAYERS</string>
    <string name="guessed_dialog_correctly">You are correct!!</string>
    <string name="guessed_dialog_wrong">Sorry, not this time.</string>
    <string name="guessed_dialog_result_title">Result</string>
    <string name="guessed_result_message">%1$d correct out of %2$d attempts</string>

    <!-- result activity -->
    <string name="result_success_message">Congratulations!</string>
    <string name="result_number_of_attempts">You did 10 correct in only %1$d attempts. Try for better next time!</string>
    <string name="result_try_less_attempts">Try for less attempts next time!</string>
    <string name="result_continue_button">PLAY AGAIN</string>

    <!-- error messages -->
    <string name="network_error_message">Sorry, something went wrong</string>
    <string name="attempts_load_error_message">Sorry, could not get the number of attempts</string>

</resources>
